@@ -2,6 +2,8 @@
 
 2006-11-25:
     - kmk, kBuild:
+        o Added cat as builtin command.
+        o Added GNU sed version 4.1.5 and ported it to MSC.
         o Added rmdir as builtin and external command.
         o Made mkdir not modify the argument strings.
         o Made mkdir deal properly with DOS slashes on OS/2 and Windows.
